--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node": "^19.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
